adding new meta titles and descriptions

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -9,22 +9,21 @@
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta name="description" content="Kontakta oss med frågor eller för att boka en besiktning" />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/kontakt" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
+	<meta property="og:title" content="Kontakta oss med frågor eller för att boka en besiktning" />
 	<meta property="og:description" content="Kontakta oss" />
 	<meta property="og:url" content="https://www.besiktningsman.se/kontakt" />
-	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
+	<meta property="og:site_name" content="Besiktningsman.se | Kontakta oss">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
 	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta name="twitter:description" content="Kontakta oss med frågor eller för att boka en besiktning" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
 	<!-- Fonts and Material Icons -->
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 
 
 	<!-- Styles -->
