--- a/projekt/index.html
+++ b/projekt/index.html
@@ -18,12 +18,10 @@
 	<meta property="og:site_name" content="Besiktningsman.se | Projekt">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
 	<meta property="og:title" content="Översikt av våra projekt" />
-	<meta property="og:description" content="Projekt besiktade av Besiktningsman.se" />
-
-
+	<meta property="og:description" content="En översikt av projekt som är besiktade av Besiktningsman.se" />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:title" content="Översikt av våra projekt" />
-	<meta name="twitter:description" content="Projekt besiktade av Besiktningsman.se" />
+	<meta name="twitter:description" content="En översikt av projekt som är besiktade av Besiktningsman.se" />
 	<!-- Fonts and Material Icons -->
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
