--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -9,7 +9,7 @@
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta name="description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för entreprenadbesiktning av nyproduktion och ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
