--- a/karriar/index.html
+++ b/karriar/index.html
@@ -9,21 +9,20 @@
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta name="description" content="Besiktningsman.se expanderar kraftigt och söker besiktningsmän i alla fack" />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/karriar" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
+	<meta property="og:title" content="Besiktningsman.se expanderar kraftigt och söker besiktningsmän i alla fack" />
 	<meta property="og:description" content="Starta din nya karriär hos oss" />
 	<meta property="og:url" content="https://www.besiktningsman.se/" />
-	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
+	<meta property="og:site_name" content="Besiktningsman.se | Karriär">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
 	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
+	<meta name="twitter:description" content="Besiktningsman.se expanderar kraftigt och söker besiktningsmän i alla fack" />
+	<meta name="twitter:title" content="Starta din nya karriär hos oss" />
 	<!-- Fonts and Material Icons -->
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 
 
