--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -9,19 +9,19 @@
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta name="description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/tjanster/brf" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
-	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta property="og:title" content="Besiktningstjänster för bostadsrättsföreningar" />
+	<meta property="og:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
 	<meta property="og:image" content="../../assets/img/backgrounds/og_image.jpg" />
 	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
+	<meta name="twitter:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
+	<meta name="twitter:title" content="Besiktningstjänster för bostadsrättsföreningar" />
 	<!-- Fonts and Material Icons -->
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
