Removed old employees and updated titles on remaining

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -329,7 +329,7 @@
 								<ul class="flex fixedSpaces later left margin-bottom-5">
 									<li class="col-3-12">
 										<h3 class="common-BodyTitle">Magnus Janson</h3>
-										<p class="common-BodyText">Verkställande Direktör</p>
+										<p class="common-BodyText">VD & styrelseordförande</p>
 										<a href="mailto:magnus.janson@besiktningsman.se">
 											<p class="common-Link">magnus.janson@besiktningsman.se</p>
 										</a>
@@ -346,13 +346,6 @@
 										<p class="common-BodyText">Affärschef</p>
 										<a href="mailto:bjorn@besiktningsman.se">
 											<p class="common-Link">bjorn@besiktningsman.se</p>
-										</a>
-									</li>
-									<li class="col-3-12">
-										<h3 class="common-BodyTitle">Jonny Seidel</h3>
-										<p class="common-BodyText">Arbetande styrelseordförande</p>
-										<a href="mailto:jonny@besiktningsman.se">
-											<p class="common-Link">jonny@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
