added a bunch of new contractors to the about page

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -260,7 +260,17 @@
 			</div>
 		</div>
 	</section>
-
+<!--
+Logos needed:
+FB Bostad - done,
+Bonava d,
+Magnolia d,
+Skandia Fastigheter d,
+Riksbyggen d,
+BESQAB d,
+Wallfast d,
+Alm equity d
+-->
 	<section class="slide whiteSlide margin-bottom-2">
 		<div class="container-lg">
 				<div class="fix-10-12">
@@ -269,7 +279,70 @@
 							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
 								<div class="table wide equalElement">
 									<div class="cell">
-										<img width="100" src="../assets/img/logos/ssm.png" alt="SSM" />
+										<img width="140" src="../assets/img/logos/skanska.png" alt="SKANSKA" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="40" src="../assets/img/logos/fbbostad.png" alt="FB Bostad" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="90" src="../assets/img/logos/bonava.png" alt="Bonava" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="140" src="../assets/img/logos/magnolia.png" alt="Magnolia" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/skandiafastigheter.png" alt="Skandia Fastigheter" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="140" src="../assets/img/logos/riksbyggen.svg" alt="Riksbyggen" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/besqab.jpeg" alt="Besqab" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="160" src="../assets/img/logos/wallfast.png" alt="Wallfast" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="70" src="../assets/img/logos/almequity.png" alt="ALM Equity" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="70" src="../assets/img/logos/ssm.png" alt="SSM" />
 									</div>
 								</div>
 							</li>
@@ -280,17 +353,18 @@
 									</div>
 								</div>
 							</li>
+
 							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
 								<div class="table wide equalElement">
 									<div class="cell">
-										<img width="80" src="../assets/img/logos/sb.png" alt="Svenska bostäder" />
+										<img width="120" src="../assets/img/logos/ikano_red.png" alt="ikano" />
 									</div>
 								</div>
 							</li>
 							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
 								<div class="table wide equalElement">
 									<div class="cell">
-										<img width="140" src="../assets/img/logos/ikano_red.png" alt="ikano" />
+										<img width="60" src="../assets/img/logos/sb.png" alt="Svenska bostäder" />
 									</div>
 								</div>
 							</li>
@@ -339,14 +413,14 @@
 							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
 								<div class="table wide equalElement">
 									<div class="cell">
-										<img width="100" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW" />
+										<img width="120" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW" />
 									</div>
 								</div>
 							</li>
 							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
 								<div class="table wide equalElement">
 									<div class="cell">
-										<img width="100" src="../assets/img/logos/hifab.jpg" alt="HIFAB" />
+										<img width="70" src="../assets/img/logos/hifab.jpg" alt="HIFAB" />
 									</div>
 								</div>
 							</li>
