--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -262,14 +262,10 @@
 	</section>
 <!--
 Logos needed:
-FB Bostad - done,
-Bonava d,
-Magnolia d,
-Skandia Fastigheter d,
-Riksbyggen d,
-BESQAB d,
-Wallfast d,
-Alm equity d
+Maxera,
+Åke Sundvall,
+Stockholms Studentbostäder
+Fabege
 -->
 	<section class="slide whiteSlide margin-bottom-2">
 		<div class="container-lg">
@@ -364,13 +360,6 @@ Alm equity d
 							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
 								<div class="table wide equalElement">
 									<div class="cell">
-										<img width="60" src="../assets/img/logos/sb.png" alt="Svenska bostäder" />
-									</div>
-								</div>
-							</li>
-							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-								<div class="table wide equalElement">
-									<div class="cell">
 										<img width="100" src="../assets/img/logos/sollentunahem.png" alt="Sollentunahem" />
 									</div>
 								</div>
@@ -393,6 +382,13 @@ Alm equity d
 								<div class="table wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/em.jpg" alt="EM" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="60" src="../assets/img/logos/sb.png" alt="Svenska bostäder" />
 									</div>
 								</div>
 							</li>
@@ -435,6 +431,34 @@ Alm equity d
 								<div class="table wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/connectpr.png" alt="connectPR" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="120" src="../assets/img/logos/maxerabostad.png" alt="Maxera Bostad" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="120" src="../assets/img/logos/sssb.png" alt="Stockholms Studentbostäder" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="160" src="../assets/img/logos/akesundvall.svg" alt="Åke Sundvall Bostäder" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="80" src="../assets/img/logos/fabege_logo.png" alt="Fabege" />
 									</div>
 								</div>
 							</li>
