--- a/brandguide/index.html
+++ b/brandguide/index.html
@@ -9,6 +9,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="../js/slides.js" type="text/javascript"></script>
 	<script src="../js/plugins.js" type="text/javascript"></script>
+	<script src="../js/custom.js" type="text/javascript"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 </head>
 <body class="slides simplifiedMobile">
@@ -48,10 +49,114 @@
 			<p class="common-BodyText">Logotyp</p>
 			<p class="common-BodyText">BM Markering svart/vit</p>
 			<p class="common-BodyText">BM Markering färg</p>
-		</div>
-		<div class="container-lg">
-			<p class="common-BodyTitle">Varumärkets färger</p>
-			<div class="brand-Color" style="background-color: #333; width: 150px; height: 100px;"></div>
+			<p class="common-BodyTitle">Varumärkesfärger</p>
+			<ul class="grid grid-77 later equal left">
+				<li class="col-3-12">
+					<div class="brandColor">
+						<div style="background-color: #1372BA;">
+						</div>
+						<ul>
+							<li>
+								<input value="#1372BA" id="myInput">
+								<div class="tooltip">
+									<button class="common-BodyText" onclick="myFunction()" onmouseout="outFunc()">
+									  <span class="tooltiptext" id="myTooltip">Kopiera till ctrl+v</span>
+									  Kopiera
+									</button>
+								</div>
+							</li>
+							<li>
+								<input value="RGB 16 114 187" id="myInput">
+								<div class="tooltip">
+									<button class="common-BodyText" onclick="myFunction()" onmouseout="outFunc()">
+									  <span class="tooltiptext" id="myTooltip">Kopiera till ctrl+v</span>
+									  Kopiera
+									</button>
+								</div>
+							</li>
+							<li>
+								<input value="CMYK 87 52 0 0" id="myInput">
+								<div class="tooltip">
+									<button class="common-BodyText" onclick="myFunction()" onmouseout="outFunc()">
+									  <span class="tooltiptext" id="myTooltip">Kopiera till ctrl+v</span>
+									  Kopiera
+									</button>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</li>
+				<li class="col-3-12">
+					<div class="brandColor">
+						<div style="background-color: #3D3F40;">
+						</div>
+						<ul>
+							<li>
+								<input value="#3D3F40" id="myInput">
+								<div class="tooltip">
+									<button class="common-BodyText" onclick="myFunction()" onmouseout="outFunc()">
+									  <span class="tooltiptext" id="myTooltip">Kopiera till ctrl+v</span>
+									  Kopiera
+									</button>
+								</div>
+							</li>
+							<li>
+								<input value="RGBA 61 63 64 100" id="myInput">
+								<div class="tooltip">
+									<button class="common-BodyText" onclick="myFunction()" onmouseout="outFunc()">
+									  <span class="tooltiptext" id="myTooltip">Kopiera till ctrl+v</span>
+									  Kopiera
+									</button>
+								</div>
+							</li>
+							<li>
+								<input value="CMYK 69 61 59 48" id="myInput">
+								<div class="tooltip">
+									<button class="common-BodyText" onclick="myFunction()" onmouseout="outFunc()">
+									  <span class="tooltiptext" id="myTooltip">Kopiera till ctrl+v</span>
+									  Kopiera
+									</button>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</li>
+				<li class="col-3-12">
+					<div class="brandColor">
+						<div style="background-color: #6D92A3;">
+						</div>
+						<ul>
+							<li>
+								<input value="#6D92A3" id="myInput">
+								<div class="tooltip">
+									<button class="common-BodyText" onclick="myFunction()" onmouseout="outFunc()">
+									  <span class="tooltiptext" id="myTooltip">Kopiera till ctrl+v</span>
+									  Kopiera
+									</button>
+								</div>
+							</li>
+							<li>
+								<input value="RGB 109 146 163" id="myInput">
+								<div class="tooltip">
+									<button class="common-BodyText" onclick="myFunction()" onmouseout="outFunc()">
+									  <span class="tooltiptext" id="myTooltip">Kopiera till ctrl+v</span>
+									  Kopiera
+									</button>
+								</div>
+							</li>
+							<li>
+								<input value="CMYK 61 33 29 1" id="myInput">
+								<div class="tooltip">
+									<button class="common-BodyText" onclick="myFunction()" onmouseout="outFunc()">
+									  <span class="tooltiptext" id="myTooltip">Kopiera till ctrl+v</span>
+									  Kopiera
+									</button>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</li>
+			</ul>
 		</div>
 	</section>
 </body>
