--- a/projekt/index.html
+++ b/projekt/index.html
@@ -282,21 +282,21 @@
 									<p class="text-blue">Läs mer</p>
 								</a>
 							</li>
-
-
-
-							<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
-								<h3 class="margin-bottom-1">Byggintelligens</h3>
-								<a target="_blank" href="http://www.anpdm.com/newsletterweb/45475946734946594778434359/42465F427140465940724240514471">
-									<p class="text-blue">Besiktningsbranschen ska utvecklas och synas!</p>
-								</a>
-								<a target="_blank" href="http://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71">
-									<p class="text-blue">Förstörelsen av Pålsundet</p>
-								</a>
-								<a target="_blank" href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true">
-									<p class="text-blue">Nu samlar vi kraft för 2018!</p>
-								</a>
-							</li>
+								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
+									<h3 class="margin-bottom-1">Byggintelligens</h3>
+									<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
+										<p class="common-Link">Tack för 2018 – ett bra år!</p>
+									</a>
+									<a href="http://bit.ly/byggintelligens2_2018_utveckling">
+										<p class="common-Link">Besiktningsbranschen ska utvecklas och synas!</p>
+									</a>
+									<a href="http://bit.ly/byggintelligens1_2018_palsundet">
+										<p class="common-Link">Förstörelsen av Pålsundet</p>
+									</a>
+									<a href="http://bit.ly/byggintelligens4_2017">
+										<p class="common-Link">Nu samlar vi kraft för 2018!</p>
+									</a>
+								</li>
 						</ul>
 					</div>
 
