--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 				<a href="https://medium.com/besiktningsbloggen" class="common-Link globalFooterCard soft-shadow white">
 					<img src="assets/img/nyheter/bmblogg.png" alt="besiktningsman.se bloggen - Vi utvecklar och förnyar" />
 				</a>
-				<a data-popup-id="letters" class="popupTrigger common-Link globalFooterCard soft-shadow white">
+				<a href="/nyheter/" class="globalFooterCard soft-shadow white">
 					<img src="assets/img/nyheter/byggint.png" alt="besiktningsman.se nyhetsbrev - hur vi förnyar byggbranschen" />
 				</a>
 		</div>
@@ -566,19 +566,19 @@
 										<p class="text-blue">Läs mer</p>
 									</a>
 								</li>
-
-
-
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
 									<h3 class="margin-bottom-1">Byggintelligens</h3>
-									<a target="_blank" href="http://www.anpdm.com/newsletterweb/45475946734946594778434359/42465F427140465940724240514471">
-										<p class="text-blue">Besiktningsbranschen ska utvecklas och synas!</p>
+									<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
+										<p class="common-Link">Tack för 2018 – ett bra år!</p>
 									</a>
-									<a target="_blank" href="http://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71">
-										<p class="text-blue">Förstörelsen av Pålsundet</p>
+									<a href="http://bit.ly/byggintelligens2_2018_utveckling">
+										<p class="common-Link">Besiktningsbranschen ska utvecklas och synas!</p>
 									</a>
-									<a target="_blank" href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true">
-										<p class="text-blue">Nu samlar vi kraft för 2018!</p>
+									<a href="http://bit.ly/byggintelligens1_2018_palsundet">
+										<p class="common-Link">Förstörelsen av Pålsundet</p>
+									</a>
+									<a href="http://bit.ly/byggintelligens4_2017">
+										<p class="common-Link">Nu samlar vi kraft för 2018!</p>
 									</a>
 								</li>
 							</ul>
@@ -675,50 +675,6 @@
 									</li>
 								</ul>
 							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- POPUP WITH LINKS TO NEWSLETTER TEXTS -->
-	<div class="popup hidden" data-popup-id="letters" id="letters">
-		<div class="close closeButton left opaque white text-blue">X</div>
-		<div class="content">
-			<div class="container">
-				<div class="wrap spaces">
-					<div class="fix-4-12 margin-top-6">
-						<div class="pad shadow selected popupContent">
-
-							<div class="absolute">
-								<h3 class="center">BYGGINTELLIGENS</h3>
-								<p class="small center">Ett nyhetsbrev från Besiktningsman.se</p>
-							</div>
-							<img src="assets/img/backgrounds/penandpaper.jpg" alt="Foto av papper och penna">
-
-							<div class="dialogContent">
-								<ul class="text-center left">
-									<li>
-										<p class="micro text-blueGrey margin-0 padding-0">2018-06-28</p>
-										<a href="http://www.anpdm.com/newsletterweb/45475946734946594778434359/42465F427140465940724240514471" target="_blank" class="text-blue bold small">
-											Besiktningsbranschen ska utvecklas och synas!
-										</a>
-									</li>
-									<li>
-										<p class="micro text-blueGrey margin-0 padding-0">2018-04-11</p>
-										<a href="http://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71" target="_blank" class="text-blue bold small">
-											Förstörelsen av Pålsundet
-										</a>
-									</li>
-									<li>
-										<p class="micro text-blueGrey margin-0 padding-0">2017-12-13</p>
-										<a href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true" target="_blank" class="text-blue bold small">
-											Nu samlar vi kraft för 2018!
-										</a>
-									</li>
-								</ul>
-							</div>
-
 						</div>
 					</div>
 				</div>
