--- a/index.html
+++ b/index.html
@@ -510,10 +510,10 @@
 	<section class="slide whiteSlide" id="footer-nav">
 		<div class="padding-5 center">
 				<a href="https://medium.com/besiktningsbloggen" class="common-Link globalFooterCard soft-shadow white">
-					<img src="assets/img/nyheter/bmblogg.png" alt="besiktningsman.se bloggen - Vi utvecklar och förnyar" />
+					<img src="assets/img/nyheter/blogpage_card.png" alt="besiktningsman.se bloggen - Vi utvecklar och förnyar" />
 				</a>
 				<a href="/nyheter/" class="globalFooterCard soft-shadow white">
-					<img src="assets/img/nyheter/byggint.png" alt="besiktningsman.se nyhetsbrev - hur vi förnyar byggbranschen" />
+					<img src="assets/img/nyheter/newspage_card.png" alt="Länk till våran nyhetssida - Läs mer om vad som sker i besiktningsbranschen här" />
 				</a>
 		</div>
 	</section>
