--- a/karriar/index.html
+++ b/karriar/index.html
@@ -188,12 +188,12 @@
 		<div class="content">
 			<div class="container">
 
-				<div class="container-lg center margin-top-1">
+				<div class="container-lg center margin-top-1 margin-bottom-8">
 					<h1 class="common-IntroText">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
 					<div class="announcement">
 	          <span class="new-pill">OBS</span>
 	          <span class="message">
-	             Vi söker även: <a href="https://jobs.academicwork.se/annons/projektkoordinator-till-familjara-besiktningsmanse/15009775" class="common-Link">Projektkoordinator</a>
+	             Vi söker även: <a href="mailto:magnus.janson@besiktningsman.se" class="common-Link">Projektkoordinator</a>
 	          </span>
 					</div>
 					<div class="pad shadow">
