--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
 	<noscript><img height="1" width="1" style="display:none"
 	  src="https://www.facebook.com/tr?id=1747503458639948&ev=PageView&noscript=1"
 	/></noscript>
+	<!-- heap analytics -->
+	<script type="text/javascript">
+	    window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","resetIdentity","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
+	      heap.load("1203366256");
+	</script>
 </head>
 
 <body class="slides scroll simplifiedMobile defaultScroll">
@@ -624,7 +629,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- POPUP WITH LINKS TO NEWSLETTER TEXTS -->
+	<!-- POPUP WITH LINKS TO DOCUMENTS -->
 	<div class="popup hidden" data-popup-id="docs" id="docs">
 		<div class="close closeButton left opaque white text-blue">X</div>
 		<div class="content">
