updated business hrs + phone nr cta in header

--- a/index.html
+++ b/index.html
@@ -217,10 +217,9 @@
 							<li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">brf</a></li>
 							<li><a href="#privat" class="common-Button text-blue fromCenter margin-bottom-1">PRIVAT</a></li>
 						</ul>
-
 						<a href="tel:0101654000" id="mobilePhoneNumber">
-							<p style="margin-bottom: 0;opacity: 1;">Växeln öppen mellan 08:30 - 17:00</p>
-							<p class="bold" style="opacity: 1;">Ring 010-165 40 00</p>
+							<p class="common-BodyText text-white margin-0">Vår växel är öppen vardagar mellan 08:30 - 17:00</p>
+							<p class="common-Link text-white margin-0">Ring 010-165 40 00</p>
 						</a>
 					</div>
 
