Updated pdf book name so that links could properly find it

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -257,7 +257,7 @@ besiktningsman går ej in i lägenhet vid serviceläge om inte representant är 
 							</li>
 
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
-								<a href="../assets/documents/brf/brf_särskild besiktning.pdf" class="card blue" target="_blank">
+								<a href="../assets/documents/brf/brf_sarskildbesiktning.pdf" class="card blue" target="_blank">
 									<div class="content blue">
 										<div class="cover blue">
 											<img
@@ -1056,7 +1056,7 @@ Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 									</li>
 									<br>
 									<li>
-										<a href="../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank" class="text-blue bold small">Särskild besiktning för BRF</a>
+										<a href="../assets/documents/brf/brf_sarskildbesiktning.pdf" target="_blank" class="text-blue bold small">Särskild besiktning för BRF</a>
 									</li>
 								</ul>
 							</div>
