--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -460,7 +460,7 @@
 										</li>
 										<br>
 										<li>
-											<a href="../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank" class="text-blue bold small">Särskild besiktning för BRF</a>
+											<a href="../assets/documents/brf/brf_sarskildbesiktning.pdf" target="_blank" class="text-blue bold small">Särskild besiktning för BRF</a>
 										</li>
 								 </ul>
 							 </div>
