--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -628,7 +628,7 @@ Fabege
 										</li>
 										<br>
 										<li>
-											<a href="../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank" class="text-blue bold small">Särskild besiktning för BRF</a>
+											<a href="../assets/documents/brf/brf_sarskildbesiktning.pdf" target="_blank" class="text-blue bold small">Särskild besiktning för BRF</a>
 										</li>
 								 </ul>
 							 </div>
