--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -432,7 +432,7 @@
 											<br> ”Särskild besiktning enligt punkt 1 ovan avser sådana av beställaren påtalade fel efter förhållanden som förelegat vid slutbesiktning men som då inte tagits upp på grund av att de inte märkts, eller att besiktningsmannen förbisett felet.
 											<br> Särskild besiktning enligt punkt 2 ovan avser dels fel som framträtt under garantitiden och där garantiansvar eventuellt föreligger, och dels sådana fel som framträtt efter garantitidens utgång men inom den 10-åriga ansvarstiden.”
 										</p>
-										<a href="../../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank"><p class="text-blue">Läs vår pdf som beskriver i detalj vad en särskild besiktning innebär</p></a>
+										<a href="../../assets/documents/brf/brf_sarskildbesiktning.pdf" target="_blank"><p class="text-blue">Läs vår pdf som beskriver i detalj vad en särskild besiktning innebär</p></a>
 									</li>
 								</ul>
 							</div>
@@ -827,7 +827,7 @@
 										</li>
 										<br>
 										<li>
-											<a href="../../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank" class="text-blue bold small">Särskild besiktning för BRF</a>
+											<a href="../../assets/documents/brf/brf_sarskildbesiktning.pdf" target="_blank" class="text-blue bold small">Särskild besiktning för BRF</a>
 										</li>
 								 </ul>
 							 </div>
