updated all job recruitment form links to just the one typeform

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -200,7 +200,7 @@
 					<div class="announcement">
 	          <span class="new-pill">OBS</span>
 	          <span class="message">
-	             Vi söker även: <a href="mailto:magnus.janson@besiktningsman.se" class="common-Link">Projektkoordinator</a>
+	             Vi söker även: <a href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank" class="typeform-share common-Link">Projektkoordinator</a>
 	          </span>
 					</div>
 					<div class="pad shadow">
