--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -245,11 +245,9 @@
 								<p>
 									Har du något eller några års erfarenhet från byggbranschen och vill ta nästa steg i karriären där du får möjlighet att själv koordinera både större och mindre besiktningsprojekt inom bygg- och fastighetsbranschen?
 								</p>
-								<div class="fromLeft left">
-									<p>Om det låter som du, gå gärna till ansökssidan och hör av dig!</p>
-									<a href="https://jobs.academicwork.se/annons/projektkoordinator-till-familjara-besiktningsmanse/15009775">
-										<p class="common-Link">Gå till ansökan</p>
-									</a>
+								<div class="fromLeft left margin-bottom-2">
+									<p>Om det låter som du, fyll gärna i ansökningsformuläret i länken nedan!</p>
+									<a href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank" class="typeform-share common-Button blue text-white">Gå till ansökan</a>
 								</div>
 							</div>
 							<div class="fromLeft left">
