--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -729,6 +729,9 @@
 							</li>
 							<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
 								<h3 class="margin-bottom-1">Besiktningsbloggen</h3>
+								<a class="" target="_blank" href="http://bit.ly/bm_debattartikel_svd">
+									<p class="text-blue">Besiktningsman.se svarar i SvD på debattinlägg om byggbranschens systemfel</p>
+								</a>
 								<a class="" target="_blank" href="https://medium.com/besiktningsbloggen/v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder-a6b6a0ac238b">
 									<p class="text-blue">Välkommen till besiktningsbranschens (och byggbranschens) nya guldålder!</p>
 								</a>
